--- a/biography.html
+++ b/biography.html
@@ -141,6 +141,8 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>International Chemical Congress of Pacific Basin Societies (Pacifichem 2025). <i>Honolulu, HI, 12/17/2025</i></li>
+		<li>2025 AIChE Annual Meeting. <i>Boston, MA, 11/3/2025</i></li>
 		<li>Developmental metabolism: flows of energy, matter, and information. European Molecular Biology Laboratory (EMBL). <i>Heidelberg, Germany, 9/10/2025</i></li>
 		<li>SIMB 75th Annual Meeting and Exhibition, Society for Industrial Microbiology and Biotechnology. <i>San Francisco, CA, 7/29/2025</i></li>
 		<li>Institute for Quantitative and Computational Biosciences, UCLA. <i>6/11/2025</i></li>
