--- a/publications.html
+++ b/publications.html
@@ -56,19 +56,17 @@ title: Publications
 <li>Schellenberger, J., Park, J. O., Conrad, T. M., Palsson, B. Ø.  <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-11-213">BiGG: A Biochemical Genetic and Genomic knowledgebase of large scale metabolic reconstructions.</a> <i>BMC Bioinformatics</i> 11,213 (2010) doi: 10.1186/1471-2105-11-213</li>
 </ol>
 
-<!-- 
-<hr />
 
+<hr />
 <section>
-<h3>Book Chapter</h3>
-<ol reversed class="ul2">
-<li>Almunaifi, A., Law, R. C., O’Keeffe, S., Pande, K., Xiang, T., Ukwueze, O., Odai-Okley, A., Lai, P.-L., Park, J. O.  <a href="">Next-generation metabolic flux analysis using machine learning.</a> <i>Advanced Biotechnology Series on Machine Learning and Big Data‐enabled Biotechnology, Wiley.</i> (2025) doi: </li>
+	<h3>Book Chapter</h3>
+	<ol reversed class="ul2">
+	<li>Almunaifi, A., Law, R. C., O’Keeffe, S., Pande, K., Xiang, T., Ukwueze, O., Odai-Okley, A., Lai, P.-L., Park, J. O.  <a href="https://onlinelibrary.wiley.com/doi/10.1002/9783527850532.ch12">Next-generation metabolic flux analysis using machine learning.</a> <i>Machine Learning and Big Data‐enabled Biotechnology, Wiley.</i> (2026) ISBN: 978-3-527-35474-0 doi: 10.1002/9783527850532.ch12</li>
+	</ol>
 </section>
-</ol>
--->
+
 
 <hr />
-
 <section>
 	<h3>Cover Art</h3>
 	<div class="box alt">
