--- a/photos.html
+++ b/photos.html
@@ -7,7 +7,10 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
-				<span class="image fit"><a href="images/group/20250829_113352.jpg"><img src="images/group/20250829_113352.jpg" alt="" /><p class="title">Emma w/ mentors Dexter and Samantha @ SURP 2025 </br> August 2025</p></a></span>
+				<span class="image fit"><a href="images/group/20260114.jpg"><img src="images/group/20260114.jpg" alt="" /><p class="title">Post-lab cleanup lunch</br> January 2026</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20250829_113352.jpg"><img src="images/group/20250829_113352.jpg" alt="" /><p class="title">Emma w/ mentors Dexter and Samantha @ SURP 2025</br> August 2025</p></a></span>
 			</div>
 			<div class="card">
 				<span class="image fit"><a href="images/fun/august_sail_2025.jpg"><img src="images/fun/august_sail_2025.jpg" alt="" /><p class="title">August Sail 2025</p></a></span>
