--- a/photos.html
+++ b/photos.html
@@ -10,6 +10,9 @@ title: Photos
 				<span class="image fit"><a href="images/group/20260114.jpg"><img src="images/group/20260114.jpg" alt="" /><p class="title">Post-lab cleanup lunch</br> January 2026</p></a></span>
 			</div>
 			<div class="card">
+				<span class="image fit"><a href="images/group/20260109_131243.jpg"><img src="images/group/20260109_131243.jpg" alt="" /><p class="title">Lunch break at UCLA</br> January 2026</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20250829_113352.jpg"><img src="images/group/20250829_113352.jpg" alt="" /><p class="title">Emma w/ mentors Dexter and Samantha @ SURP 2025</br> August 2025</p></a></span>
 			</div>
 			<div class="card">
